--- a/Algoritmos Genéticos/Feras Formidáveis/4.9/4.9.ipynb
+++ b/Algoritmos Genéticos/Feras Formidáveis/4.9/4.9.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -164,9 +164,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 H7PmiHortgd8zzmLYfUY\n",
+      "2 H7ACLHorgg5tzzmvYqsY\n",
+      "3 27XTiHoSFjMtzzfvVfUY\n",
+      "4 H7PTiHorgjMtzzfvYfsY\n",
+      "5 H7gmiHorgjI8zimjYxUY\n",
+      "6 27gTiHorgjItzimvYxUY\n",
+      "7 27gTiHorgjItzifjYqUY\n",
+      "8 27gTiHorgjEtzifjYqUY\n",
+      "9 27gTiHoogjItzifjYqeY\n",
+      "10 27gTiHoogjEtzifjYqeY\n",
+      "11 27gmiHoogjEtzifjYqeY\n",
+      "12 27gTiHojgjEtzifjYqeY\n",
+      "13 27gTixojgjEtzifjYqeY\n",
+      "14 28gTixojgjEtzifjYqeY\n",
+      "16 28gmixojgjEtzifjYqeY\n",
+      "17 28gmixojgjEszifjYqeY\n",
+      "18 28gmixojgjEsziejYqeY\n",
+      "19 28gmiRojgjEszifjYqeY\n",
+      "20 28gmiRojgjEsziejYqeY\n",
+      "21 28gmjRojgjEsziejYqeY\n",
+      "22 28gmjRojgjEsnifjYqeY\n",
+      "23 28gmjRojfjEsnifjYqeY\n",
+      "24 28gmjRojfjEsniejYqeY\n",
+      "25 29gljRojfjEsniejYqeY\n",
+      "28 29gljRojfjEsniejZqeY\n",
+      "29 29gkjRojfjEsniejZqeY\n",
+      "30 29gkjRojejEsniejZqeY\n",
+      "32 29gkjVojfjEsniejZqeY\n",
+      "33 29gkjVnjfjEsniejZqeY\n",
+      "34 29gkjVnjfjEsmiejZqeY\n",
+      "36 29gkjVnjekEsniejZqeY\n",
+      "38 29gkjVnjdkEsniejZqeY\n",
+      "39 29gkjVnjdjEbniejZreY\n",
+      "41 29gkjVnjdjEbniejyred\n",
+      "43 29gkjanjdjEbniejyred\n",
+      "45 29gkjanjdjEbniejyree\n",
+      "46 29gkqanjdjEbniejyred\n",
+      "47 29gkqanjdjEbniejyree\n",
+      "48 29ghqanjdjEbniejyree\n",
+      "49 29ggqanjdjEbniejyree\n",
+      "50 29gfqanjdjEbniejyree\n",
+      "51 29gfranjdjEbniejyree\n",
+      "52 39gfranjdjEbniejyree\n",
+      "54 39gfranjdjEcniejyree\n",
+      "55 39gfranjdqEbniejyree\n",
+      "56 39gfranjdqEcniejyree\n",
+      "57 39gfranjdqEcniejyrei\n",
+      "58 39gfranjaqEcniejyrei\n",
+      "61 39gfranjaqEcnidjyrei\n",
+      "64 39gfranjaqDcnidjyrei\n",
+      "66 39gfranjaqDcnidjyrbi\n",
+      "68 39gfranjaqDcnidjysbi\n",
+      "69 39gfranjaqDcnidjxsbi\n",
+      "72 39gfranjaqDcmidjxsbi\n",
+      "73 39nfranjaqDcnidjxsbi\n",
+      "75 39nfranjaqDcmidjxsbi\n",
+      "76 39nfranjaqDcmidjxsbs\n",
+      "77 39nfranjaqDcmicjxsbs\n",
+      "80 49nfranjaqDcmicjxsbs\n",
+      "82 49nfranjaqDclicjxsbs\n",
+      "84 49mfranjaqDclicjxsbs\n",
+      "86 49mfranjaqDclicixsbs\n",
+      "88 49mfranjaqDclicixsas\n",
+      "90 59mfranjaqDclicixsas\n",
+      "91 59mfranjaqDcliciwsas\n",
+      "92 39mbranjaqDcliciwsas\n",
+      "93 59mbranjaqDcliciwsas\n",
+      "96 59mbranjarDcliciwsas\n",
+      "105 59mbranjarDdliciwsas\n",
+      "111 59maranjarDdliciwsas\n",
+      "113 59maranjasDdlicivsas\n",
+      "122 59maranjasDelicivsas\n",
+      "135 59laranjasDelicivsas\n",
+      "165 59laranjasDelicipsas\n",
+      "185 59laranjasDeliciosas\n"
+     ]
+    }
+   ],
    "source": [
     "menor_fitness_geral = float(\"inf\")\n",
     "geracao = 0\n",
@@ -244,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "org": null
  },
