--- a/Redes Neurais/Monstrinhos/3.2_3.4.ipynb
+++ b/Redes Neurais/Monstrinhos/3.2_3.4.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "42f66fd3",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -21,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d601315",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -42,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1deb0a81",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -51,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1385bc7f",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0473e256",
    "metadata": {},
    "outputs": [],
@@ -103,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9da23846",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -112,7 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "id": "25ed2dc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +246,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e013914e",
    "metadata": {},
    "source": [
     "#### Testes"
@@ -247,6 +254,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "90ffe9e5",
    "metadata": {},
    "source": [
     "Para fins de teste iremos criar uma molecula de água e calcular o seu peso atomico."
@@ -254,7 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "id": "fb9011a0",
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +285,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a41bcf23",
    "metadata": {},
    "source": [
     "Agora iremos testar a funcionalidade dos dunders criando duas moleculas diferentes."
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "49afe62f",
    "metadata": {},
    "outputs": [],
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "b409e606",
    "metadata": {},
    "outputs": [
@@ -307,7 +317,7 @@
        "(True, False, False, True, True)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,6 +334,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0acb075e",
    "metadata": {},
    "source": [
     "A partir dos testes é notavel a funcionalidade dos dunders."
@@ -331,6 +342,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1dde1ce",
    "metadata": {},
    "source": [
     "#### Conclusão"
@@ -338,6 +350,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c54b053a",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -347,6 +360,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cadcadd9",
    "metadata": {},
    "source": [
     "#### Referências"
@@ -354,6 +368,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7084b8e9",
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify;\">\n",
@@ -361,7 +376,9 @@
     "[**1**] W3SCHOOLS. Python String join() Method. Disponível em: \n",
     "https://www.w3schools.com/python/ref_string_join.asp.\n",
     "\n",
-    "[**2**] W3SCHOOLS. Python List Comprehension. Disponível em: https://www.w3schools.com/python/python_lists_comprehension.asp. "
+    "[**2**] W3SCHOOLS. Python List Comprehension. Disponível em: https://www.w3schools.com/python/python_lists_comprehension.asp. \n",
+    "\n",
+    "[**3**].CASSAR, Daniel. [Material de sala de aula]. Redes Neurais e Algoritmos Genéticos, 2025, Ilum - Escola de Ciência."
    ]
   }
  ],
@@ -381,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
