--- a/Redes Neurais/Monstrinhos/3.3.ipynb
+++ b/Redes Neurais/Monstrinhos/3.3.ipynb
@@ -166,6 +166,15 @@
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;O presente projeto apresenta a possibilidade de representar relações reais no meio computacional, abrindo um leque de técnicas utilizadas em diferentes áreas de estudo. Além disso, os conceitos aqui apresentados não seguem regras rígidas, sendo, portanto, desaconselhada a utilização do código para fins técnicos."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referências\n",
+    "\n",
+    "[1].CASSAR, Daniel. [Material de sala de aula]. Redes Neurais e Algoritmos Genéticos, 2025, Ilum - Escola de Ciência."
+   ]
   }
  ],
  "metadata": {
